--- a/Conditionalstatements.ipynb
+++ b/Conditionalstatements.ipynb
@@ -5,7 +5,6 @@
    "metadata": {},
    "source": [
     "#### Conditional Statements (if, elif, else)\n",
-    "Video Outline:\n",
     "1. Introduction to Conditional Statements\n",
     "2. if Statement\n",
     "3. else Statement\n",
@@ -17,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are allowed to vote in the elections\n"
+      "You are allowed to vote \n"
      ]
     }
    ],
@@ -33,12 +32,12 @@
     "age=20\n",
     "\n",
     "if age>=18:\n",
-    "    print(\"You are allowed to vote in the elections\")"
+    "    print(\"You are allowed to vote \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +46,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
