--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -5,12 +5,10 @@
    "metadata": {},
    "source": [
     "#### Loops\n",
-    "Video Outline:\n",
     "1. Introduction to Loops\n",
     "2. for Loop\n",
     "   - Iterating over a range\n",
     "   - Iterating over a string\n",
-    "\n",
     "3. while Loop\n",
     "4. Loop Control Statements\n",
     "    - break\n",
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +179,7 @@
    "source": [
     "## strings\n",
     "\n",
-    "str=\"Krish Naik\"\n",
+    "str=\"Thabang\"\n",
     "\n",
     "for i in str:\n",
     "    print(i)"
@@ -309,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +437,7 @@
    "metadata": {},
    "source": [
     "#### Conclusion:\n",
-    "Loops are powerful constructs in Python that allow you to execute a block of code multiple times. By understanding and using for and while loops, along with loop control statements like break, continue, and pass, you can handle a wide range of programming tasks efficiently."
+    "Loops are powerful constructs in Python that allow you to execute a block of code multiple times. "
    ]
   },
   {
